--- a/iOS_NIM/Base.lproj/Main.storyboard
+++ b/iOS_NIM/Base.lproj/Main.storyboard
@@ -14,7 +14,7 @@
         <!--Navigation Controller-->
         <scene sceneID="AKC-Ma-aex">
             <objects>
-                <navigationController id="NMi-wh-wMX" sceneMemberID="viewController">
+                <navigationController id="NMi-wh-wMX" customClass="NIMUINavigationController" customModule="iOS_NIM" customModuleProvider="target" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="OWi-iA-yRu">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -175,24 +175,8 @@
                                     <constraint firstAttribute="width" constant="300" id="elw-8k-nyT"/>
                                 </constraints>
                             </stackView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="match.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="7uK-Oh-kpS">
-                                <rect key="frame" x="114" y="338.5" width="9" height="122"/>
-                                <accessibility key="accessibilityConfiguration" identifier="chooseMatch3"/>
-                            </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="match.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="xn5-9G-HRO">
-                                <rect key="frame" x="183" y="338.5" width="9" height="122"/>
-                                <accessibility key="accessibilityConfiguration" identifier="chooseMatch2"/>
-                            </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="match.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="ApH-FO-1Vk">
-                                <rect key="frame" x="252" y="338.5" width="9" height="122"/>
-                                <accessibility key="accessibilityConfiguration" identifier="chooseMatch1"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="9" id="Arz-GW-P3U"/>
-                                    <constraint firstAttribute="height" constant="122" id="uUX-vq-zpe"/>
-                                </constraints>
-                            </imageView>
                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="3" minValue="1" maxValue="3" translatesAutoresizingMaskIntoConstraints="NO" id="9C1-F5-NY2">
-                                <rect key="frame" x="112" y="467.5" width="151" height="31"/>
+                                <rect key="frame" x="36" y="329" width="141.5" height="31"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="3DG-EP-exB"/>
                                 </constraints>
@@ -201,11 +185,11 @@
                                 </connections>
                             </slider>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6s2-d3-nrc">
-                                <rect key="frame" x="163" y="517.5" width="49" height="38"/>
+                                <rect key="frame" x="185.5" y="325" width="152" height="38"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <accessibility key="accessibilityConfiguration" identifier="playButton"/>
                                 <inset key="contentEdgeInsets" minX="10" minY="10" maxX="10" maxY="10"/>
-                                <state key="normal" title="Play"/>
+                                <state key="normal" title="Remove X matches"/>
                                 <connections>
                                     <action selector="btnPlay:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gNX-AM-Jco"/>
                                 </connections>
@@ -213,26 +197,15 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="9C1-F5-NY2" firstAttribute="top" secondItem="xn5-9G-HRO" secondAttribute="bottom" constant="7" id="2ev-AQ-2ql"/>
+                            <constraint firstItem="9C1-F5-NY2" firstAttribute="top" secondItem="2xy-SV-ol3" secondAttribute="bottom" constant="10" id="4jb-GA-Fsr"/>
                             <constraint firstItem="2xy-SV-ol3" firstAttribute="top" secondItem="R45-71-Jtb" secondAttribute="bottom" constant="20" id="5GW-6g-F4L"/>
-                            <constraint firstItem="7uK-Oh-kpS" firstAttribute="width" secondItem="xn5-9G-HRO" secondAttribute="width" id="5Pk-Qi-hOF"/>
-                            <constraint firstItem="ApH-FO-1Vk" firstAttribute="top" secondItem="xn5-9G-HRO" secondAttribute="top" id="Dhi-0N-2bZ"/>
                             <constraint firstItem="R45-71-Jtb" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="F6t-rb-uoH"/>
-                            <constraint firstItem="7uK-Oh-kpS" firstAttribute="top" secondItem="xn5-9G-HRO" secondAttribute="top" id="JBK-x6-6tf"/>
-                            <constraint firstItem="6s2-d3-nrc" firstAttribute="top" secondItem="9C1-F5-NY2" secondAttribute="bottom" constant="20" id="LLp-Au-6uu"/>
+                            <constraint firstItem="6s2-d3-nrc" firstAttribute="trailing" secondItem="2xy-SV-ol3" secondAttribute="trailing" id="L5n-4t-I0z"/>
                             <constraint firstItem="R45-71-Jtb" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="PW8-8q-WUR"/>
-                            <constraint firstItem="xn5-9G-HRO" firstAttribute="leading" secondItem="7uK-Oh-kpS" secondAttribute="trailing" constant="60" id="Wc2-S9-aKd"/>
-                            <constraint firstItem="9C1-F5-NY2" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="YcD-dy-XBK"/>
-                            <constraint firstItem="xn5-9G-HRO" firstAttribute="top" secondItem="UQq-pH-TnE" secondAttribute="bottom" constant="20" id="bba-uO-YBA"/>
+                            <constraint firstItem="9C1-F5-NY2" firstAttribute="leading" secondItem="2xy-SV-ol3" secondAttribute="leading" id="Qlh-9X-pXz"/>
+                            <constraint firstItem="6s2-d3-nrc" firstAttribute="leading" secondItem="9C1-F5-NY2" secondAttribute="trailing" constant="10" id="WTJ-JQ-QBD"/>
                             <constraint firstItem="2xy-SV-ol3" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="hBr-Wy-wnV"/>
-                            <constraint firstItem="ApH-FO-1Vk" firstAttribute="leading" secondItem="xn5-9G-HRO" secondAttribute="trailing" constant="60" id="k0x-cs-uPo"/>
-                            <constraint firstItem="xn5-9G-HRO" firstAttribute="height" secondItem="ApH-FO-1Vk" secondAttribute="height" id="lOn-gT-I6r"/>
-                            <constraint firstItem="7uK-Oh-kpS" firstAttribute="height" secondItem="xn5-9G-HRO" secondAttribute="height" id="lYZ-s0-3IC"/>
-                            <constraint firstItem="xn5-9G-HRO" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="oiS-2c-bON"/>
-                            <constraint firstItem="9C1-F5-NY2" firstAttribute="trailing" secondItem="ApH-FO-1Vk" secondAttribute="trailing" id="p4o-tC-lOE"/>
-                            <constraint firstItem="9C1-F5-NY2" firstAttribute="leading" secondItem="7uK-Oh-kpS" secondAttribute="leading" id="t0X-1T-ENs"/>
-                            <constraint firstItem="6s2-d3-nrc" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="uX1-f4-uB8"/>
-                            <constraint firstItem="xn5-9G-HRO" firstAttribute="width" secondItem="ApH-FO-1Vk" secondAttribute="width" id="zHH-qc-ckU"/>
+                            <constraint firstItem="6s2-d3-nrc" firstAttribute="centerY" secondItem="9C1-F5-NY2" secondAttribute="centerY" id="suS-LP-4gY"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="NIM game" id="cH5-ym-lHD">
@@ -261,10 +234,8 @@
                     </navigationItem>
                     <connections>
                         <outlet property="choiceHumanVsHuman" destination="B5r-yZ-f9j" id="kAb-uA-Pro"/>
-                        <outlet property="chooseMatch1" destination="7uK-Oh-kpS" id="phX-YR-Vep"/>
-                        <outlet property="chooseMatch2" destination="xn5-9G-HRO" id="JKC-Ie-3c8"/>
-                        <outlet property="chooseMatch3" destination="ApH-FO-1Vk" id="muv-Iv-DPR"/>
                         <outlet property="labelIndicator" destination="R45-71-Jtb" id="pEO-Wh-v5W"/>
+                        <outlet property="playButton" destination="6s2-d3-nrc" id="Aor-j7-ZoR"/>
                         <outlet property="sliderNbMatches" destination="9C1-F5-NY2" id="C9c-S8-NBL"/>
                         <outletCollection property="remainingMatches" destination="tMv-kq-h6u" collectionClass="NSMutableArray" id="6az-D4-K64"/>
                         <outletCollection property="remainingMatches" destination="qsy-Pd-pKb" collectionClass="NSMutableArray" id="Kxr-at-IeT"/>
@@ -290,7 +261,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="122" y="36"/>
+            <point key="canvasLocation" x="120.8" y="35.532233883058474"/>
         </scene>
         <!--Settings-->
         <scene sceneID="yVf-bg-mKA">
